# gnuradio

gr-digital/python/digital/: qa_ofdm_sync_sc_cfb.py
gr-fastblocks/: CMakeLists.txt
gr-fastblocks/cmake/Modules/: fastblocksConfig.cmake
gr-fastblocks/docs/: README.fastblocks
gr-fastblocks/docs/doxygen/: Doxyfile.in
gr-fastblocks/docs/doxygen/other/: group_defs.dox  main_page.dox
gr-fastblocks/grc/: CMakeLists.txt  fastblocks_ofdm_metric.xml
gr-fastblocks/include/fastblocks/: CMakeLists.txt  api.h  ofdm_metric.h
gr-fastblocks/lib/: CMakeLists.txt  ofdm_metric_impl.cc  ofdm_metric_impl.h  qa_fastblocks.cc  qa_fastblocks.h  test_fastblocks.cc
gr-fastblocks/python/: CMakeLists.txt  __init__.py  qa_ofdm_metric.py
gr-fastblocks/swig/: CMakeLists.txt  fastblocks_swig.i
volk/: CMakeLists.txt
volk/apps/: volk_profile.cc
volk/kernels/volk/: volk_32fc_x2_s32u_ofdm_metric_32f.h
volk/lib/: CMakeLists.txt  qa_utils.cc  testqa.cc
volk/tmpl/: volk.tmpl.h
